@@ -3,11 +3,11 @@ project in some way or another, in no particular order...
 
 
 	Terral (Will LaShell,) for spotting quite a few bugs, suggesting all
-	kinds of improvements  (good ones too ;-) and for creating #gedit and
-	the cool TBOT that resides their.
+	kinds of improvements  (good ones too ;-), for creating #gedit and
+	the cool TBOT that resides their, and for being our general PR person.
 
 	Chris Lahey, for his excellent plugins api which he's donated to us from
-	his text editor GO, and for a good deal of other help along the way.
+	his text editor GO, and for a great deal of other help along the way.
 	
 	Andy Kahn, for the Toolbar, Message Box, Document list, and numerous
 	other improvements.
@@ -21,6 +21,11 @@ project in some way or another, in no particular order...
 
 	The people in #gimp and on the gtk list for answering all our stupid
 	questions on cvs, gtk, etc :-)
+
+	Martin Wahlen, for his spell-check plugin, and some bugfixes.
+
+	Mikael Hermansson, for his project management plugin, bugfixes, and
+	code contributions.
 
 	Robert Edmonds, for knowing a good app when he saw it, and for
 	putting it on the excellant Debian cd.
