@@ -229,18 +229,6 @@ gE_menus_init (gE_window *window, gE_data *data)
 void add_callback_data (GnomeUIInfo *menu, gE_window *window, gE_data *data);
 void remove_callback_data (GnomeUIInfo *menu, gE_window *window, gE_data *data);
 
-GnomeUIInfo gedit_program_menu [] = {
-	{ GNOME_APP_UI_ITEM, N_("About..."), NULL, gE_about_box, NULL, NULL,
-		GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_ABOUT },
-	{ GNOME_APP_UI_ITEM, N_("Preferences..."), NULL, NULL, NULL, NULL,
-		GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PREF },
-	{ GNOME_APP_UI_SEPARATOR },
-        { GNOME_APP_UI_ITEM, N_("Quit"),  NULL, file_quit_cb, (gpointer) GE_DATA, NULL,
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_QUIT,
-          'Q', GDK_CONTROL_MASK, NULL },
-        GNOMEUIINFO_END
-};
-
 GnomeUIInfo gedit_file_menu [] = {
 	{ GNOME_APP_UI_ITEM, N_("New"),  NULL, file_new_cb, (gpointer) GE_DATA, NULL,
 	  GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_NEW,
@@ -263,11 +251,9 @@ GnomeUIInfo gedit_file_menu [] = {
 
 	{ GNOME_APP_UI_SEPARATOR },
 
-#if 0
 	{ GNOME_APP_UI_ITEM, N_("Quit"),  NULL, file_quit_cb, (gpointer) GE_DATA, NULL,
 	  GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_QUIT,
 	  'Q', GDK_CONTROL_MASK, NULL },
-#endif
 
 	GNOMEUIINFO_END
 };
@@ -357,14 +343,16 @@ GnomeUIInfo gedit_window_menu []={
 	{ GNOME_APP_UI_ITEM, N_("Document List"), NULL, files_list_popup, (gpointer) GE_DATA, NULL,
 	  GNOME_APP_PIXMAP_NONE, NULL,
 	  'L', GDK_CONTROL_MASK, NULL },
-	{ GNOME_APP_UI_ITEM, N_("Message Box"), NULL, msgbox_show, NULL, NULL },
+	{ GNOME_APP_UI_ITEM, N_("Message Box"), NULL, msgbox_show, NULL, NULL,
+	  GNOME_APP_PIXMAP_NONE, NULL },
 	{ GNOME_APP_UI_ENDOFINFO }
 };
 
-#if 0
 GnomeUIInfo gedit_help_menu []= {
+#if 0 /* We don't have any real documentation yet, so this isn't needed */
 	{ GNOME_APP_UI_HELP, NULL, NULL, NULL, NULL, NULL,
 		GNOME_APP_PIXMAP_NONE, NULL, 0, 0, NULL}, 
+#endif
 	
 	{GNOME_APP_UI_ITEM, N_("About..."), NULL, gE_about_box, NULL, NULL,
 		GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_ABOUT, 0, 0, NULL},
@@ -373,7 +361,6 @@ GnomeUIInfo gedit_help_menu []= {
 	
 };
 
-#endif
 
 #if PLUGIN_TEST
 GnomeUIInfo gedit_plugins_menu []= {
@@ -382,14 +369,6 @@ GnomeUIInfo gedit_plugins_menu []= {
 #endif
 
 GnomeUIInfo gedit_menu [] = {
-	#ifdef WITH_FOOT
-	{ GNOME_APP_UI_SUBTREE, " ", NULL, &gedit_program_menu, NULL, NULL,
-		GNOME_APP_PIXMAP_DATA, foot_xpm, 0, 0, NULL },
-	#else
-	{ GNOME_APP_UI_SUBTREE, N_("Program"), NULL, &gedit_program_menu, NULL, NULL,
-		GNOME_APP_PIXMAP_NONE, NULL, 0, 0, NULL },
-	#endif
-
 	{ GNOME_APP_UI_SUBTREE, N_("File"), NULL, &gedit_file_menu, NULL, NULL,
 		GNOME_APP_PIXMAP_NONE, NULL, 0, 0, NULL },
 	{ GNOME_APP_UI_SUBTREE, N_("Edit"), NULL, &gedit_edit_menu, NULL, NULL,
@@ -404,16 +383,13 @@ GnomeUIInfo gedit_menu [] = {
 #endif
 	{ GNOME_APP_UI_SUBTREE, N_("Window"), NULL, &gedit_window_menu, NULL, NULL,
 	  GNOME_APP_PIXMAP_NONE, NULL, 0, 0, NULL },
-#if 0
 	{ GNOME_APP_UI_SUBTREE, N_("Help"), NULL, &gedit_help_menu, NULL, NULL,
 		GNOME_APP_PIXMAP_NONE, NULL, 0, 0, NULL },
-#endif
 	GNOMEUIINFO_END
 };
 
 void gE_menus_init (gE_window *window, gE_data *data)
 {
-	add_callback_data (gedit_program_menu, window, data);
 	add_callback_data (gedit_file_menu, window, data);
 	add_callback_data (gedit_edit_menu, window, data);
 	add_callback_data (gedit_search_menu, window, data);
@@ -421,13 +397,10 @@ void gE_menus_init (gE_window *window, gE_data *data)
 	add_callback_data (gedit_toolbar_menu, window, data);
 	add_callback_data (gedit_options_menu, window, data);
 	add_callback_data (gedit_window_menu, window, data);
-#if 0
 	add_callback_data (gedit_help_menu, window, data);
-#endif
 
 	gnome_app_create_menus (GNOME_APP (window->window), gedit_menu);
 
-	remove_callback_data (gedit_program_menu, window, data);
 	remove_callback_data (gedit_file_menu, window, data);
 	remove_callback_data (gedit_edit_menu, window, data);
 	remove_callback_data (gedit_search_menu, window, data);
@@ -435,9 +408,7 @@ void gE_menus_init (gE_window *window, gE_data *data)
 	remove_callback_data (gedit_toolbar_menu, window, data);
 	remove_callback_data (gedit_options_menu, window, data);
 	remove_callback_data (gedit_window_menu, window, data);
-#if 0
 	remove_callback_data (gedit_help_menu, window, data);
-#endif
 
 	/* Decrease the padding along the menubar */
 	gtk_container_border_width (GTK_CONTAINER (
