@@ -1,3 +1,14 @@
+1998-11-18  Evan Lawrence <evan@worldpath.net>
+
+	* src/menus.c: Ditched the foot menu - it's a great
+	UI idea, but it needs to be done properly in gnome-app,
+	and is just confusing people ATM
+	
+	* src/gE_prefslib.c: Fixed some things that had broken
+	GTK-only prefs - it's still not perfect, but sorta kinda
+	works now. Let me know specifics on what's wrong with it,
+	if you can find any.
+
 1998-11-15  Alex Roberts  <bse@dial.pipex.com>
 
 	* src/gE_prefs_box.c: Prefrerences now work in non-Gnome
